# aztec-2.0

./: .gitignore  README.md
barretenberg/: CMakeLists.txt  README.md  bootstrap.sh
barretenberg/cmake/: arch.cmake  benchmark.cmake  gtest.cmake  module.cmake  threading.cmake
barretenberg/cmake/toolchains/: x86_64-apple-clang.cmake
barretenberg/src/aztec/: CMakeLists.txt
barretenberg/src/aztec/common/: CMakeLists.txt  assert.hpp  profiler.cpp  profiler.hpp
barretenberg/src/aztec/crypto/blake2s/: c_bind.cpp
barretenberg/src/aztec/crypto/hashers/: hashers.hpp
barretenberg/src/aztec/crypto/pedersen/: c_bind.cpp  pedersen.cpp
barretenberg/src/aztec/dsl/: CMakeLists.txt
barretenberg/src/aztec/dsl/standard_format/: blake2s_constraint.hpp  c_bind.cpp  c_bind.h  ecdsa_secp256k1.hpp  fixed_base_scalar_mul.hpp  generic_constraint_system.hpp  hash_to_field.hpp  merkle_insert.hpp  merkle_membership_constraint.hpp  pedersen.hpp  schnorr_verify.hpp  sha256_constraint.hpp  standard_format.hpp  standard_format.test.cpp
barretenberg/src/aztec/ecc/fields/: field.hpp
barretenberg/src/aztec/numeric/random/: engine.cpp  engine.hpp
barretenberg/src/aztec/plonk/: CMakeLists.txt
barretenberg/src/aztec/plonk/composer/: composer_base.cpp  composer_base.hpp  mimc_composer.cpp  mimc_composer.hpp  mimc_composer.test.cpp  standard_composer.cpp  standard_composer.hpp  standard_composer.test.cpp  (+4 more)
barretenberg/src/aztec/polynomials/: polynomial.cpp  polynomial.hpp  polynomial_arithmetic.cpp  polynomial_arithmetic.hpp
barretenberg/src/aztec/rollup/: CMakeLists.txt
(+101 files in other folders)
